<resources>
    <string name="app_name" translatable="false">Oo Shop</string>
    <string name="ad_mob_app_id" translatable="false">ca-app-pub-6887780973759894~2010868284</string>
    <string name="ad_mob_banner1" translatable="false">ca-app-pub-6887780973759894/1731327379</string>
    <string name="facebook_app_id" translatable="false">2086849514971819</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2086849514971819</string>
    <string name="google_map_key" translatable="false">AIzaSyD9yH3omUF3YL2O58EQYDGBuHW_vbLqQsA</string>
    <string name="google_api_app_id" translatable="false">246978642134-be3oricar04ct5ocfqbeat348tssj94v.apps.googleusercontent.com</string>
    <string name="default_web_client_id2" translatable="false">246978642134-q65timgq6i7r1q6ie5r1m6kvjsueri5c.apps.googleusercontent.com</string>
    <string name="please_wait_page_complete">Please wait until the page loads</string>
    <string name="delete_address_title">Delete address</string>
    <string name="delete_address_message">Are you sure you want to delete this address?</string>
    <string name="seller_panel" translatable="false">Seller Panel</string>
    <string name="please_login_to_control_seller_pannel" translatable="false">Please Login to Control your Panel</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">verification failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="sign_in_with_phone_succes">Verification Completed</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="verify_button">Verify</string>
    <string name="resend_button">Resend</string>
    <string name="start_button">Start</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string-array name="phoned_codes">
        <item>+971</item>
        
    </string-array>
    <string name="actionSearch"> SEARCH </string>
    <string name="actionLanguage"> LANGUAGE </string>
    <string name="actionHome"> HOME </string>
    <string name="actionCategory"> CATEGORY </string>
    <string name="actionCategories"> CATEGORIES </string>
    <string name="actionShop"> SHOP </string>
    <string name="actionCart"> MY CART </string>
    <string name="actionOrders"> MY ORDERS </string>
    <string name="actionAccount"> MY ACCOUNT </string>
    <string name="actionAddresses"> MY ADDRESSES </string>
    <string name="actionFavourites"> MY FAVORITES </string>
    <string name="actionSettings"> SETTINGS </string>
    <string name="actionNews"> NEWS </string>
    <string name="actionIntro"> INTRO </string>
    <string name="actionAbout"> ABOUT US </string>
    <string name="actionContactUs"> CONTACT US </string>
    <string name="actionShareApp"> SHARE APP </string>
    <string name="actionRateApp"> RATE APP </string>
    <string name="actionLogin"> LOGIN </string>
    <string name="actionLogout"> LOGOUT </string>
    <string name="homeStyle1"> HOME 1 </string>
    <string name="homeStyle2"> HOME 2 </string>
    <string name="homeStyle3"> HOME 3 </string>
    <string name="homeStyle4"> HOME 4 </string>
    <string name="homeStyle5"> HOME 5 </string>
    <string name="categoryStyle1"> CATEGORY 1 </string>
    <string name="categoryStyle2"> CATEGORY 2 </string>
    <string name="categoryStyle3"> CATEGORY 3 </string>
    <string name="categoryStyle4"> CATEGORY 4 </string>
    <string name="categoryStyle5"> CATEGORY 5 </string>
    <string name="categoryStyle6"> CATEGORY 6 </string>
    <string name="Newest"> NEWEST </string>
    <string name="topSeller"> TOP SELLER </string>
    <string name="superDeals"> SUPER DEALS </string>
    <string name="mostLiked"> MOST LIKED </string>
    <string name="all"> All </string>
    <string name="newest"> Newest </string>
    <string name="top_seller"> Top Seller </string>
    <string name="super_deals"> Deals </string>
    <string name="most_liked"> Most Liked </string>
    <string name="recentlyViewed"> Recently Viewed </string>
    <string name="news_all"> All News </string>
    <string name="news_categories"> News Categories </string>
    <string name="news_description"> News Description </string>
    <string name="ok"> OK </string>
    <string name="and"> and </string>
    <string name="NEW"> NEW </string>
    <string name="OFF"> OFF </string>
    <string name="save"> Save </string>
    <string name="send"> Send </string>
    <string name="next"> Next </string>
    <string name="skip"> Skip </string>
    <string name="grant"> Grant </string>
    <string name="title"> Title </string>
    <string name="start"> Start </string>
    <string name="retry"> Retry </string>
    <string name="apply"> Apply </string>
    <string name="search"> Search </string>
    <string name="clear"> Clear </string>
    <string name="login"> Login </string>
    <string name="signup"> Signup </string>
    <string name="cancel"> Cancel </string>
    <string name="welcome"> Welcome </string>
    <string name="explore"> Explore </string>
    <string name="checkout"> Checkout </string>
    <string name="register"> Register </string>
    <string name="drawerOpen"> DrawerOpen </string>
    <string name="drawerClose"> DrawerClose </string>
    <string name="view"> View </string>
    <string name="date"> Date </string>
    <string name="cart"> Cart </string>
    <string name="product"> Product </string>
    <string name="products"> Products </string>
    <string name="category"> Category </string>
    <string name="categories"> Categories </string>
    <string name="final_price"> Final Price </string>
    <string name="total_price"> Total Price </string>
    <string name="product_price"> Product Price </string>
    <string name="checkout_price"> Checkout Price </string>
    <string name="product_title"> Product Title </string>
    <string name="view_product"> View Product </string>
    <string name="quantity"> Quantity </string>
    <string name="description"> Description </string>
    <string name="attributes"> Attributes </string>
    <string name="attribute_name"> Attribute Name </string>
    <string name="product_description"> Product Description </string>
    <string name="likes"> Likes </string>
    <string name="google_login"> Google Login </string>
    <string name="facebook_login"> Facebook Login </string>
    <string name="in_stock"> In Stock </string>
    <string name="outOfStock"> Out of Stock </string>
    <string name="addToCart"> Add to Cart </string>
    <string name="removeProduct"> Remove Product </string>
    <string name="removeFromCart"> Remove from Cart </string>
    <string name="save_address"> Save Address </string>
    <string name="save_changes"> Save Changes </string>
    <string name="reset_filters"> Reset Filters </string>
    <string name="order_now"> Order Now </string>
    <string name="continue_shopping"> Continue Shopping </string>
    <string name="proceed_checkout"> Proceed Checkout </string>
    <string name="order"> Order </string>
    <string name="order_id"> Order ID </string>
    <string name="order_status"> Order Status </string>
    <string name="order_date"> Order Date </string>
    <string name="order_address"> Order Address </string>
    <string name="order_details"> Order Details </string>
    <string name="order_confirmed"> Order Confirmed </string>
    <string name="order_notes"> Order Notes </string>
    <string name="order_comments"> Order Comments </string>
    <string name="no_of_products"> No. of Products </string>
    <string name="tax"> Tax </string>
    <string name="shipping"> Shipping </string>
    <string name="discount"> Discount </string>
    <string name="subtotal"> Subtotal </string>
    <string name="total"> Total </string>
    <string name="coupon"> Coupon </string>
    <string name="coupon_code"> Coupon Code </string>
    <string name="coupon_amount"> Coupon Amount </string>
    <string name="coupon_discount"> Coupon Discount </string>
    <string name="coupon_type"> Coupon Type </string>
    <string name="sample_coupons"> Sample Coupon Codes </string>
    <string name="payment_method"> Payment Method </string>
    <string name="payment_details"> Payment Details </string>
    <string name="card_number"> Card Number </string>
    <string name="expiry_month"> Expiry Month </string>
    <string name="expiry_year"> Expiry Year </string>
    <string name="card_expiry"> Card Expiry </string>
    <string name="card_cvv"> Card CVV </string>
    <string name="payPal"> PayPal </string>
    <string name="billing_address"> Billing Address </string>
    <string name="shipping_address"> Shipping Address </string>
    <string name="shipping_method"> Shipping Method </string>
    <string name="full_name"> Full Name </string>
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="email"> Email </string>
    <string name="email_address"> Email Address </string>
    <string name="dob"> Date of Birth </string>
    <string name="gender"> Gender </string>
    <string name="male"> Male </string>
    <string name="female"> Female </string>
    <string name="fax"> Fax </string>
    <string name="mobile"> Mobile </string>
    <string name="contact_no"> Contact No </string>
    <string name="address"> Address </string>
    <string name="country"> Country </string>
    <string name="zone"> Zone </string>
    <string name="state"> State </string>
    <string name="city"> City </string>
    <string name="post_code"> Post Code </string>
    <string name="suburb"> Suburb </string>
    <string name="password"> Password </string>
    <string name="confirm_password"> Confirm Password </string>
    <string name="new_password"> New Password </string>
    <string name="current_password"> Current Password </string>
    <string name="new_address"> New Address </string>
    <string name="update_address"> Update Address </string>
    <string name="edit_profile"> Edit Profile </string>
    <string name="subscribe_newsletter"> Subscribe Newsletter </string>
    <string name="thank_you"> Thank You </string>
    <string name="add_coupon"> Add Coupon? </string>
    <string name="your_message"> Your Message </string>
    <string name="empty_cart"> Your Cart is Empty </string>
    <string name="record_not_found"> No Record Found </string>
    <string name="item_added_to_cart"> Item Added to Cart </string>
    <string name="item_removed_from_cart"> Removed from Cart </string>
    <string name="something_went_wrong"> Something went Wrong! </string>
    <string name="added_to_favourites"> Added to Favourites </string>
    <string name="removed_from_favourites"> Removed from Favourites </string>
    <string name="not_a_member"> Not a Member? </string>
    <string name="login_or_signup"> Login &amp; Register </string>
    <string name="login_or_create_account"> Please Login or create Account </string>
    <string name="thank_you_for_shopping"> Thank You for shopping with us! </string>
    <string name="coupon_removes_other_coupons"> This coupon may remove all other coupons! </string>
    <string name="forgot_your_password"> Forgot Your Password? </string>
    <string name="forgot_password"> I\'ve forgotten my password? </string>
    <string name="official_web"> Official Website </string>
    <string name="privacy_policy"> Privacy Policy </string>
    <string name="refund_policy"> Refund Policy </string>
    <string name="delivery_policy"> Delivery Policy </string>
    <string name="service_terms"> Terms &amp; Conditions </string>
</resources>