<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/mDetailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/phone_auth_fields"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/phone_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/phoned_codes"
                    android:spinnerMode="dialog"></Spinner>
                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/verify_phone_number"
                    android:inputType="phone" />
            </LinearLayout>


            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Verification Code"
                android:inputType="number"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="3.0">

            <Button
                android:id="@+id/button_start_verification"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/start_button"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_verify_phone"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_button"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_resend"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/resend_button"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

